tests/ui/parser/new-unicode-escapes-2.rs
pub fn main() {
    let s = "\u{260311111111}"; //~ ERROR overlong unicode escape
}

// ferrocene-annotations: fls_ypa86oqxhn9u
// Character Literals
